Start aligning nav menu

--- a/index.html
+++ b/index.html
@@ -12,20 +12,35 @@
 <body>
 
     <header>
-        <div class="header-container">
+        <div class="header-container" id="header-container">
             <div class="empty-element"></div>
             <img class="logo" src="assets/logo.png" alt="The Aerial Arts Hub">
             <img class="nav-logo" id="nav-logo" src="assets/menu.svg" alt="Open navigation menu">
         </div>
         <nav class="mobile-menu" id="mobile-menu">
-            <img class="closing-x" src="assets/close.svg" alt="Close the menu">
+            <img class="closing-x" id="closing-x" src="assets/close.svg" alt="Close the menu">
             <div class="nav-links">
-                <h2 class="nav-item">Studio map</h2>
-                <h2 class="nav-item">Resources <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand"></h2>
-                <h2 class="nav-item">Shops <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand"></h2>
-                <h2 class="nav-item">Skills <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand"></h2>
-                <h2 class="nav-item">What's on</h2>
-                <h2 class="nav-item">About</h2>
+                <div class="nav-item-div">
+                    <h2 class="nav-item">Studio map</h2>
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item">Resources</h2>
+                    <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand">
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item">Shops</h2>
+                    <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand">
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item">Skills</h2>
+                    <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand">
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item">What's on</h2>
+                </div>
+                <div class="nav-item-div">
+                    <h2 class="nav-item">About</h2>
+                </div>
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn">Sign in</button>
