Finish most styling for home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <img class="logo" src="assets/logo.png" alt="The Aerial Arts Hub">
             <img class="nav-logo" id="nav-logo" src="assets/menu.svg" alt="Open navigation menu">
         </div>
+
+        <!-- mobile menu -->
+
         <nav class="mobile-menu" id="mobile-menu">
             <img class="closing-x" id="closing-x" src="assets/close.svg" alt="Close the menu">
             <div class="nav-links">
@@ -25,15 +28,15 @@
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Resources</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand">
+                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Shops</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand">
+                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Skills</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-small-down.svg" alt="Expand">
+                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">What's on</h2>
@@ -47,11 +50,16 @@
                 <input type="search" class="search-bar">
             </div>
         </nav>
+
     </header>
 
     <main>
+
+        <!-- Scroll cards category 1 -->
+
         <h1 class="cards-category">What's on</h1>
         <div class="scroll-cards">
+
             <div class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
@@ -67,14 +75,255 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of event</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Date and location</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of event</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Date and location</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of event</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Date and location</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of event</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Date and location</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
             <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
         </div>
 
-        <!-- more scroll-cards here -->
+        <!-- Scroll cards category 2 -->
+
+        <h1 class="cards-category">Find a studio</h1>
+        <div class="scroll-cards">
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of studio</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+        </div>
+
+        <!-- Scroll cards category 3 -->
+
+        <h1 class="cards-category">Discover pole & aerial wear</h1>
+        <div class="scroll-cards">
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of brand</h2>
+                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">City, country</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+        </div>
+
+        <!-- More scroll cards categories to add below -->
 
         <h1 class="cards-category">Studios around the world</h1>
-        <div class="map-card">
-            <div class="card">
+        <div class="map-card-container">
+            <div class="map-card">
                 <img class="item-img" src="assets/placeholder.jpg">
             </div>
         </div>
@@ -83,7 +332,7 @@
 
     <footer>
         <div class="footer-links-group">
-            <p class="footer-link">Home</p>
+            <p class="footer-link"><a href="#header-container">Home</a></p>
             <p class="footer-link">About</p>
             <p class="footer-link">Sign in</p>
         </div>
