Finish setup of home page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-
-    <header>
+    <header id="header">
         <div class="header-container" id="header-container">
             <div class="empty-element"></div>
-            <img class="logo" src="assets/logo.png" alt="The Aerial Arts Hub">
+            <a href="#header"><img class="logo" src="assets/logo.jpg" alt="The Aerial Arts Hub"></a>
             <img class="nav-logo" id="nav-logo" src="assets/menu.svg" alt="Open navigation menu">
         </div>
 
@@ -53,7 +52,7 @@
 
     </header>
 
-    <main>
+    <main id="main">
 
         <!-- Scroll cards category 1 -->
 
@@ -65,7 +64,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of event</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">Date and location</p>
                     <div class="item-tags-group">
@@ -81,7 +80,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of event</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">Date and location</p>
                     <div class="item-tags-group">
@@ -97,7 +96,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of event</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">Date and location</p>
                     <div class="item-tags-group">
@@ -113,7 +112,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of event</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">Date and location</p>
                     <div class="item-tags-group">
@@ -129,7 +128,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of event</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">Date and location</p>
                     <div class="item-tags-group">
@@ -153,7 +152,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of studio</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -169,7 +168,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of studio</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -185,7 +184,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of studio</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -201,7 +200,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of studio</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -217,7 +216,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of studio</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -241,7 +240,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of brand</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -257,7 +256,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of brand</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -273,7 +272,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of brand</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -289,7 +288,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of brand</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -305,7 +304,7 @@
                 <div class="card-info">
                     <div class="name-and-icon">
                         <h2 class="item-name">Name of brand</h2>
-                        <img class="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
                     </div>
                     <p class="item-text">City, country</p>
                     <div class="item-tags-group">
@@ -332,11 +331,11 @@
 
     <footer>
         <div class="footer-links-group">
-            <p class="footer-link"><a href="#header-container">Home</a></p>
+            <p class="footer-link"><a href="#header">Home</a></p>
             <p class="footer-link">About</p>
             <p class="footer-link">Sign in</p>
         </div>
-        <img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top">
+        <a href="#header"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
     </footer>
 
     <script src="script.js"></script>
