Add links on and to about page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Aerial Arts Hub</title>
-    <link rel="stylesheet" href="styles.css">
-    </link>
+    <link rel="stylesheet" href="styles.css"></link>
 </head>
 
 <body>
@@ -41,7 +40,7 @@
                     <h2 class="nav-item">What's on</h2>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">About</h2>
+                    <h2 class="nav-item"><a href="about.html">About</a></h2>
                 </div>
             </div>
             <div class="nav-input">
@@ -332,7 +331,7 @@
     <footer>
         <div class="footer-links-group">
             <p class="footer-link"><a href="#header">Home</a></p>
-            <p class="footer-link">About</p>
+            <p class="footer-link"><a href="about.html">About</a></p>
             <p class="footer-link">Sign in</p>
         </div>
         <a href="#header"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
