Create mobile menu dropdown and other page links

--- a/about.html
+++ b/about.html
@@ -30,15 +30,15 @@
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Resources</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Shops</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Skills</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">What's on</h2>
@@ -56,9 +56,39 @@
     </header>
 
     <main id="main">
+        <img class="about-item-img" src="assets/placeholder.jpg" alt="About page featured image">
+        <div class="about-text">
+            <p class="about-p underlined">About</p>
+            <h2 class="about-h2">The Aerial Arts Hub</h2>
+            <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
+                to discover studios, coaches, performers, brands, and other useful resources all over the world.
+                We aim to be up-to-date, inclusive, accessible, and always free!
+            </p>
+            <h2 class="about-h2">Follow our journey</h2>
+            <p class="about-p">The Aerial Arts Hub is a passion project of amateur aerialist and self-taught
+                developer Yaiza Canopoli. She has been chronicling her journey developing it in a
+                newsletter—you can subscribe over at theaerialartshub.substack.com. You can also follow
+                The Aerial Arts Hub on Instagram.
+            </p>
+            <p class="about-p">If you enjoy using the platform and want to support it, you can consider becoming
+                a paid subscriber to the newsletter. 💖
+            </p>
+            <h2 class="about-h2">#FreePalestine</h2>
+            <p class="about-p">At The Aerial Arts Hub, we stand against genocide and occupation, and in solidarity
+                with the people of Palestine. We therefore do not feature, endorse or otherwise support any
+                studios, coaches, performers, brands or other aerial and pole entities associated with Israel.
+            </p>
+            <h2 class="about-h2">Sex work positivity</h2>
+            <p class="about-p">We acknowledge the roots of pole dance in strip, the impact that sex workers have
+                had and continue to have on pole, and the stigma many sex workers face in their daily lives on top
+                of the material and legal difficulties that often come with the work. We love pole as a hobby
+                and sport, but we are also first and foremost a sex work-positive platform, and we will always
+                support and stand in solidarity with sex workers in the pole and aerial scene.
+            </p>
+        </div>
     </main>
 
-    <footer>
+    <footer class="about-footer">
         <div class="footer-links-group">
             <p class="footer-link"><a href="index.html">Home</a></p>
             <p class="footer-link"><a href="#header">About</a></p>
