--- a/index.html
+++ b/index.html
@@ -26,15 +26,43 @@
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Resources</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <div class="dropdown-container" id="dropdown-container">
+                        <p class="dropdown-item">Studios</p>
+                        <p class="dropdown-item">Coaches</p>
+                        <p class="dropdown-item">Performers</p>
+                        <p class="dropdown-item">Troupes and collectives</p>
+                        <p class="dropdown-item">Retreats</p>
+                        <p class="dropdown-item">Competitions</p>
+                        <p class="dropdown-item">Festivals</p>
+                        <p class="dropdown-item">Physio and flexy</p>
+                        <p class="dropdown-item">Photography and video</p>
+                        <p class="dropdown-item">Other resources</p>
+                        <p class="dropdown-item">See all</p>
+                    </div>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Shops</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <div class="dropdown-container" id="dropdown-container">
+                        <p class="dropdown-item">Clothing</p>
+                        <p class="dropdown-item">Heels</p>
+                        <p class="dropdown-item">Equipment</p>
+                    </div>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Skills</h2>
-                    <img class="nav-link-arrow" src="assets/triangle-down-crop.svg" alt="Expand">
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <div class="dropdown-container" id="dropdown-container">
+                        <p class="dropdown-item">Hoop/lyra</p>
+                        <p class="dropdown-item">Silks</p>
+                        <p class="dropdown-item">Trapeze</p>
+                        <p class="dropdown-item">Hammock/sling</p>
+                        <p class="dropdown-item">Pole</p>
+                        <p class="dropdown-item">Straps + rope</p>
+                        <p class="dropdown-item">Others</p>
+                        <p class="dropdown-item">See all</p>
+                    </div>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">What's on</h2>
